<resources>
    <string name="app_name">Tutor Time</string>


    <!--    Admin Registrations-->
    <string name="name">Full Name</string>
    <string name="email">E-mail</string>
    <string name="contactNumber">Contact Number</string>
    <string name="pass">Password</string>
    <string name="cPass">Confirm Password</string>
    <string name="registrations">Registration</string>

    <!--    Teacher Registrations-->

    <string name="alert">
        if you registration az a teacher so you contact me +92 307 6061363 before registrations so I will give to you user-id
    </string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="cnic">C.N.I.C</string>
    <string name="qualification">Qualification</string>
    <string-array name="youCanTeach">
        <item>Which Class do you Teach</item>
        <item>Matric</item>
        <item>FSC</item>
    </string-array>
    <string name="subjectsYouCanTeach">Subjects You Can Teach</string>
    <string name="anyExperienceOfTeaching">Any Experience of Teaching</string>
    <string name="preferableTeachingArea">Preferable Teaching Area</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>FeMale</item>
    </string-array>

    <string-array name="howDidYouFindUs">
        <item>How Did You Find Us</item>
        <item>Facebook</item>
        <item>Friends</item>
        <item>Adds</item>
        <item>Colleague</item>
        <item>NEWS Paper</item>
        <item>Others</item>

    </string-array>
    <string name="signUp">Sign UP</string>


    <!--    LogIn Screen-->

    <string-array name="role">

        <item>Select</item>
        <item>Super Admin</item>
        <item>Admin</item>
        <item>Teacher</item>


    </string-array>
    <string name="logIn">Log IN</string>
    <string name="addTuition">Add Tuition</string>


    <!--    View Profile-->
    <string name="viewProfile">View Profile</string>

    <!--    Update Profile-->
    <string name="updateProfile">Update Profile</string>
    <string name="updateMyData">Update</string>


</resources>