<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/updateProfile"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="35sp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/updateName"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white" />


                <EditText
                    android:id="@+id/updateNumber"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/contactNumber"
                    android:inputType="phone"
                    android:textColorHint="@color/white"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white" />



                <EditText
                    android:id="@+id/updateCNIC"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/cnic"
                    android:inputType="phone"
                    android:textColorHint="@color/white"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/updateAddress"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/address"
                    android:textColorHint="@color/white"
                    android:layout_marginTop="30dp"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/updateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:textColorHint="@color/white"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/updateData"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_bg"
                    android:text="@string/updateMyData"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </ScrollView>




    </LinearLayout>

</RelativeLayout>