<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AdminRegistrations">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profileImageAdmin"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_person"

                    />

                <EditText
                    android:id="@+id/userNameAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/name"
                    android:paddingLeft="10dp"
                    android:inputType="text"
                    android:maxLength="15"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="15dp"
                    />

                <EditText
                    android:id="@+id/emailAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingLeft="10dp"
                    android:inputType="textWebEmailAddress"
                    android:maxLength="30"
                    android:hint="@string/email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/contactNumberAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingLeft="10dp"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:hint="@string/contactNumber"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/cnicAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingLeft="10dp"
                    android:inputType="phone"
                    android:hint="@string/cnic"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/addressAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingLeft="10dp"
                    android:inputType="text"
                    android:hint="@string/address"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="20dp"/>


                <EditText
                    android:id="@+id/passwordAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword"
                    android:minEms="8"
                    android:hint="@string/pass"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="20dp"/>




                <EditText
                    android:id="@+id/confirmPasswordAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:hint="@string/cPass"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="20dp"/>

                <CheckBox
                    android:id="@+id/adminCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Show Password"
                    android:textColor="@color/white"/>


                <Button
                    android:id="@+id/saveDataAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/registrations"
                    android:textColor="@color/white"
                    android:background="@drawable/signup_bg"/>





            </LinearLayout>
        </ScrollView>



    </LinearLayout>



</RelativeLayout>