<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".UpdateMyAdminProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">




        <LinearLayout
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:background="@drawable/circle_image_bg"
            android:gravity="center"
            android:layout_gravity="center">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/updateMyImageAdmin"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/updateMyName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/name"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:textColor="@color/white" />


            <EditText
                android:id="@+id/updateMyNumber"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/contactNumber"
                android:inputType="phone"
                android:textColorHint="@color/white"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:textColor="@color/white" />



            <EditText
                android:id="@+id/updateMyCNIC"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/cnic"
                android:inputType="phone"
                android:textColorHint="@color/white"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/updateMyAddress"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/address"
                android:textColorHint="@color/white"
                android:layout_marginTop="30dp"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/updateMyEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/email"
                android:paddingTop="20dp"
                android:inputType="textWebEmailAddress"
                android:textColorHint="@color/white"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/updateMyData"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_bg"
                android:text="@string/updateMyData"
                android:textColor="@color/white"/>

        </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>







</RelativeLayout>