<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"

        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo"
                    />


                <EditText
                    android:id="@+id/emailLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:drawableLeft="@drawable/ic_email"
                    android:paddingLeft="10dp"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="50dp"/>

                <EditText
                    android:id="@+id/passwordLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/pass"
                    android:inputType="textWebPassword"
                    android:drawableLeft="@drawable/ic_lock"
                    android:paddingLeft="10dp"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="20dp"/>
                <CheckBox
                    android:id="@+id/logInCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Show Password"
                    android:textColor="@color/white"/>

                <Spinner
                    android:id="@+id/roleLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:entries="@array/role"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:focusableInTouchMode="true"
                    android:textSize="25sp"/>


                <Button
                    android:id="@+id/btnLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_bg"
                    android:text="@string/logIn"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnAddTuition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/signup_bg"
                    android:text="@string/addTuition"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--            <TextView-->
                <!--                android:id="@+id/reg"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:gravity="center"-->
                <!--                android:layout_marginTop="10dp"-->
                <!--                android:textStyle="bold"-->
                <!--                android:textSize="15sp"-->
                <!--                android:text="@string/addTuition"-->
                <!--                android:textColor="@color/white"/>-->


            </LinearLayout>
        </ScrollView>



    </LinearLayout>


</RelativeLayout>